linked bulma, tested functionality

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,62 @@
   <meta charset="utf-8">
   <title>Nashville Software School</title>
   <link rel="stylesheet" href="./styles/styles.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
 </head>
 <body>
-  <nav></nav>
-  <header></header>
+  <header>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+      <a class="navbar-item">
+        Create Task
+      </a>
+      <a class="navbar-item">
+        Archives
+      </a>
+      <a class="navbar-item">
+        Insights
+      </a>
+      <div class="navbar-item has-dropdown">
+        <a class="navbar-link">
+          Add Category
+        </a>
+        <div class="navbar-dropdown">
+          <a class="navbar-item">
+            Overview
+          </a>
+          <a class="navbar-item">
+            Elements
+          </a>
+          <a class="navbar-item">
+            Components
+          </a>
+          <hr class="navbar-divider">
+          <div class="navbar-item">
+            Version 0.7.1
+          </div>
+    </nav>
+  </header>
+  <div class="columns">
+    <div class="column has-background-link">
+      <h1>To do test</h1>
+      <div class="column">
+        <h3>new text</h3>
+      </div>
+      <div class="column">
+        <h5>other new text</h5>
+      </div>
+    </div>
+    <div class="column">
+      <h1>Doing test</h1>
+    </div>
+    <div class="column">
+      <h1>Done test</h1>
+    </div>
+  </div>
   <article>
     <header></header>
-    <section></section>
+    <section id="dom-output"></section>
     <footer></footer>
   </article>
   <footer></footer>
