added modal component to navbar Create Task and Category

--- a/src/index.html
+++ b/src/index.html
@@ -11,35 +11,25 @@
 <body>
   <header>
     <nav class="navbar" role="navigation" aria-label="main navigation">
-      <a class="navbar-item">
+      <a class="navbar-item" id="createTask">
         Create Task
       </a>
-      <a class="navbar-item">
+      <a class="navbar-item" id="archives">
         Archives
       </a>
-      <a class="navbar-item">
+      <a class="navbar-item" id="insights">
         Insights
       </a>
-      <div class="navbar-item has-dropdown">
-        <a class="navbar-link">
-          Add Category
-        </a>
-        <div class="navbar-dropdown">
-          <a class="navbar-item">
-            Overview
-          </a>
-          <a class="navbar-item">
-            Elements
-          </a>
-          <a class="navbar-item">
-            Components
-          </a>
-          <hr class="navbar-divider">
-          <div class="navbar-item">
-            Version 0.7.1
-          </div>
+      <a class="navbar-item" id="createCategory">
+        Create Category
+      </a>
     </nav>
   </header>
+
+  <!-- Modal -->
+  <div class="modal"></div>
+  <!-- /Modal -->
+
   <div class="columns">
     <div class="column has-background-link">
       <h1>To do test</h1>
