--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
+    <nav class="navbar is-info" role="navigation" aria-label="main navigation">
       <a class="navbar-item" id="createTask">
         Create Task
       </a>
