--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,16 @@
 <body>
   <header>
     <nav class="navbar is-info" role="navigation" aria-label="main navigation">
-      <a class="navbar-item" id="createTask">
+      <a class="navbar-item has-text-white" id="createTask">
         Create Task
       </a>
-      <a class="navbar-item" id="archives">
+      <a class="navbar-item has-text-white" id="archives">
         Archives
       </a>
-      <a class="navbar-item" id="insights">
+      <a class="navbar-item has-text-white" id="insights">
         Insights
       </a>
-      <a class="navbar-item" id="createCategory">
+      <a class="navbar-item has-text-white" id="createCategory">
         Create Category
       </a>
     </nav>
