--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,8 @@
   <article>
     <header></header>
     <section id="dom-output">
-      <div class="columns">
+
+      <!-- <div class="columns">
         <div class="column" id="To-Do" ondrop="drop(event, this)" ondragover="allowDrop(event)">
             <div draggable="true"
             ondragstart="drag(event)" id="please-work">task 1</div>
@@ -44,7 +45,8 @@
         <div class="column" id="done" ondrop="drop(event, this)" ondragover="allowDrop(event)">
             <div draggable="true" ondragstart="drag(event, this)" id="please-work3">task 3</div>
         </div>
-    </div>
+    </div> -->
+
     </section>
     <footer></footer>
   </article>
