Added one nav button for create category and create task

--- a/src/index.html
+++ b/src/index.html
@@ -12,28 +12,22 @@
   <header>
     <nav class="navbar is-info" role="navigation" aria-label="main navigation">
       <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-item" href="#">
+        <a class="navbar-item has-text-white" href="#">
           Create
         </a>
         <div class="navbar-dropdown is-boxed">
-            <a class="navbar-item" href="/documentation/overview/start/">
-              Overview
+            <a class="navbar-item" id="createTask" href="#">
+              Category
             </a>
-            <a class="navbar-item" href="https://bulma.io/documentation/modifiers/syntax/">
-              Modifiers
+            <a class="navbar-item" id="createCategory" href="#">
+              Task
             </a>
       </div>
-      <a class="navbar-item has-text-white" id="createTask">
-        Create Task
-      </a>
       <a class="navbar-item has-text-white" id="archives">
         Archives
       </a>
       <a class="navbar-item has-text-white" id="insights">
         Insights
-      </a>
-      <a class="navbar-item has-text-white" id="createCategory">
-        Create Category
       </a>
     </nav>
   </header>
