fixed html issues

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
               Task
             </a>
       </div>
+    </div>
       <a class="navbar-item has-text-white" id="archives">
         Archives
       </a>
