--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html> 
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
   <header>
     <nav class="navbar is-info" role="navigation" aria-label="main navigation">
       <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-item has-text-white" href="#">
+        <a class="navbar-item has-text-white" id="createBtn" href="#">
           Create
         </a>
         <div class="navbar-dropdown is-boxed">
